# superhero-api-proxy

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
app/: main.py  settings.py
app/api/: errors.py  exceptions.py  routers.py  server.py
app/core/: containers.py  ioc_containers.py
app/ioc/: containers.py
app/ioc/providers/: app.py  db.py  http.py  logging.py
app/models/api/: hero.py
app/models/db/: base.py  hero.py
app/plugins/http/: http_client.py
app/plugins/logger/: logging_config.py  settings.py
app/plugins/postgres/: plugin.py  settings.py
app/routers/: hero.py
app/services/: hero.py  superhero_api.py
app/services/storage/: interface.py  repo_inmemory.py  repository.py
migrations/: env.py
migrations/versions/: 20250808-2248-dc8e67659a0d_test.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/hero_router/: conftest.py  test_hero_router.py
tests/integration/hero_router/mocks/: api_client.py  api_response_search_a.json  http_client.py  test_http_client.py
tests/integration/utils/db/: db_seeder.py
tests/integration/utils/mocks/: api_response_search_a.json  test_http_client.py
